[gd_scene load_steps=103 format=3 uid="uid://dqecsh443q65u"]

[ext_resource type="Script" path="res://enemies/GhostBoss/ghost_boss.gd" id="1_djl10"]
[ext_resource type="Texture2D" uid="uid://c34n48xypvxtn" path="res://enemies/GhostBoss/Sprites/attacking.png" id="1_hl2nl"]
[ext_resource type="Texture2D" uid="uid://bdd7vmwf6id0a" path="res://enemies/GhostBoss/Sprites/death.png" id="2_70hef"]
[ext_resource type="Texture2D" uid="uid://ch1u4mpu5o2tm" path="res://enemies/GhostBoss/Sprites/idle.png" id="3_x8ek7"]
[ext_resource type="Texture2D" uid="uid://dlxmfygwfu3nt" path="res://enemies/GhostBoss/Sprites/idle2.png" id="4_ejkd5"]
[ext_resource type="Texture2D" uid="uid://cyanl4y2lqbo4" path="res://enemies/GhostBoss/Sprites/hit.png" id="4_jglf5"]
[ext_resource type="Texture2D" uid="uid://c62b6y403h1jj" path="res://enemies/GhostBoss/Sprites/skill1.png" id="5_g4h0e"]
[ext_resource type="Texture2D" uid="uid://du5i6co20p3ef" path="res://enemies/GhostBoss/Sprites/summon.png" id="6_h31xh"]
[ext_resource type="Texture2D" uid="uid://c1eyjejcul5bp" path="res://enemies/GhostBoss/Sprites/summonDeath.png" id="7_y6ir5"]
[ext_resource type="Texture2D" uid="uid://dpnino5b0chfw" path="res://enemies/GhostBoss/Sprites/summonAppear.png" id="8_o80jv"]
[ext_resource type="Texture2D" uid="uid://cot86oqf8oebf" path="res://enemies/GhostBoss/Sprites/summonIdle.png" id="9_1dllr"]
[ext_resource type="AudioStream" uid="uid://dtwpul4teq7x1" path="res://audio/boss/boss_hurt.mp3" id="12_bm7d3"]
[ext_resource type="AudioStream" uid="uid://6do6xm464vmq" path="res://audio/boss/demon_sfx_short.mp3" id="13_8xtdu"]
[ext_resource type="AudioStream" uid="uid://cj0l1ex0q6rxe" path="res://audio/boss/demon_summoon.mp3" id="14_woyt7"]
[ext_resource type="AudioStream" uid="uid://dhi7edb43ee12" path="res://audio/samurai_sword_miss.mp3" id="15_2pf1k"]
[ext_resource type="AudioStream" uid="uid://t38m02sfawh0" path="res://audio/boss/boss_death.mp3" id="16_rd6wh"]
[ext_resource type="AudioStream" uid="uid://ik2yqvn70lnq" path="res://audio/samurai_sword.mp3" id="16_uv2nh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_acu68"]
atlas = ExtResource("1_hl2nl")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2epx"]
atlas = ExtResource("1_hl2nl")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_86s3j"]
atlas = ExtResource("1_hl2nl")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7mo4"]
atlas = ExtResource("1_hl2nl")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jwpg"]
atlas = ExtResource("1_hl2nl")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijw4v"]
atlas = ExtResource("1_hl2nl")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvodm"]
atlas = ExtResource("1_hl2nl")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_giw1v"]
atlas = ExtResource("1_hl2nl")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_15cn2"]
atlas = ExtResource("1_hl2nl")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uw6q"]
atlas = ExtResource("1_hl2nl")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rf337"]
atlas = ExtResource("1_hl2nl")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2jvy"]
atlas = ExtResource("1_hl2nl")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xt4n"]
atlas = ExtResource("1_hl2nl")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jayts"]
atlas = ExtResource("2_70hef")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmlgf"]
atlas = ExtResource("2_70hef")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bh8o5"]
atlas = ExtResource("2_70hef")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w5gs"]
atlas = ExtResource("2_70hef")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4ien"]
atlas = ExtResource("2_70hef")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u44c"]
atlas = ExtResource("2_70hef")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvpx5"]
atlas = ExtResource("2_70hef")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgr3o"]
atlas = ExtResource("2_70hef")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2nig"]
atlas = ExtResource("2_70hef")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1h0g"]
atlas = ExtResource("2_70hef")
region = Rect2(900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk61s"]
atlas = ExtResource("2_70hef")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1gp4"]
atlas = ExtResource("2_70hef")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kilcj"]
atlas = ExtResource("2_70hef")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vh8w3"]
atlas = ExtResource("2_70hef")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur0t6"]
atlas = ExtResource("2_70hef")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5eej"]
atlas = ExtResource("2_70hef")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhgmw"]
atlas = ExtResource("2_70hef")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6n6p"]
atlas = ExtResource("2_70hef")
region = Rect2(700, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8kt2"]
atlas = ExtResource("2_70hef")
region = Rect2(800, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_201c3"]
atlas = ExtResource("2_70hef")
region = Rect2(900, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpxln"]
atlas = ExtResource("4_jglf5")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nysuk"]
atlas = ExtResource("4_jglf5")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ordn1"]
atlas = ExtResource("4_jglf5")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3su3"]
atlas = ExtResource("4_jglf5")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgsy5"]
atlas = ExtResource("3_x8ek7")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsgum"]
atlas = ExtResource("3_x8ek7")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7huh"]
atlas = ExtResource("3_x8ek7")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2l8mg"]
atlas = ExtResource("3_x8ek7")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_axw0j"]
atlas = ExtResource("4_ejkd5")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_40ef7"]
atlas = ExtResource("4_ejkd5")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8ej5"]
atlas = ExtResource("4_ejkd5")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbjjy"]
atlas = ExtResource("4_ejkd5")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wpc5"]
atlas = ExtResource("4_ejkd5")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5j80"]
atlas = ExtResource("4_ejkd5")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r64ou"]
atlas = ExtResource("4_ejkd5")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fotvm"]
atlas = ExtResource("4_ejkd5")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8it4"]
atlas = ExtResource("5_g4h0e")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f4h2"]
atlas = ExtResource("5_g4h0e")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5lhx"]
atlas = ExtResource("5_g4h0e")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdyq2"]
atlas = ExtResource("5_g4h0e")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr2tq"]
atlas = ExtResource("5_g4h0e")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2i2ey"]
atlas = ExtResource("5_g4h0e")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_10yae"]
atlas = ExtResource("5_g4h0e")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_iq4yy"]
atlas = ExtResource("5_g4h0e")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgtce"]
atlas = ExtResource("5_g4h0e")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2x03m"]
atlas = ExtResource("5_g4h0e")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_knbo5"]
atlas = ExtResource("5_g4h0e")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qghd8"]
atlas = ExtResource("5_g4h0e")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tnqx"]
atlas = ExtResource("6_h31xh")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndv0x"]
atlas = ExtResource("6_h31xh")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_stf63"]
atlas = ExtResource("6_h31xh")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_l02rk"]
atlas = ExtResource("6_h31xh")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4o1sv"]
atlas = ExtResource("6_h31xh")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4lhm"]
atlas = ExtResource("7_y6ir5")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_u68pv"]
atlas = ExtResource("7_y6ir5")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_bg87b"]
atlas = ExtResource("7_y6ir5")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5e8b"]
atlas = ExtResource("7_y6ir5")
region = Rect2(0, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_76yaq"]
atlas = ExtResource("7_y6ir5")
region = Rect2(50, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_cn6hx"]
atlas = ExtResource("7_y6ir5")
region = Rect2(100, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_nde40"]
atlas = ExtResource("8_o80jv")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ip3gt"]
atlas = ExtResource("8_o80jv")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4fv5"]
atlas = ExtResource("8_o80jv")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_3u6nf"]
atlas = ExtResource("8_o80jv")
region = Rect2(0, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ch8n5"]
atlas = ExtResource("8_o80jv")
region = Rect2(50, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_343co"]
atlas = ExtResource("8_o80jv")
region = Rect2(100, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_nypq1"]
atlas = ExtResource("9_1dllr")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m3h2"]
atlas = ExtResource("9_1dllr")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f1o0"]
atlas = ExtResource("9_1dllr")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_t44as"]
atlas = ExtResource("9_1dllr")
region = Rect2(150, 0, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_1rywt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_acu68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2epx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86s3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7mo4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jwpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijw4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvodm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giw1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15cn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uw6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rf337")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2jvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xt4n")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jayts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmlgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bh8o5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w5gs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4ien")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u44c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvpx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgr3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2nig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1h0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk61s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1gp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kilcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vh8w3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur0t6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5eej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhgmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6n6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8kt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_201c3")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpxln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nysuk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ordn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3su3")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgsy5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsgum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7huh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2l8mg")
}],
"loop": true,
"name": &"idle1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_axw0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40ef7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8ej5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbjjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wpc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5j80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r64ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fotvm")
}],
"loop": true,
"name": &"idle2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8it4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f4h2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5lhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdyq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr2tq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2i2ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10yae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iq4yy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgtce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2x03m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knbo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qghd8")
}],
"loop": false,
"name": &"skill",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tnqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndv0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stf63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l02rk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4o1sv")
}],
"loop": false,
"name": &"summon",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4lhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u68pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bg87b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5e8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76yaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cn6hx")
}],
"loop": false,
"name": &"summonDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nde40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ip3gt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4fv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3u6nf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ch8n5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_343co")
}],
"loop": false,
"name": &"summon_appear",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nypq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m3h2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f1o0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t44as")
}],
"loop": true,
"name": &"summon_idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kx1sc"]
radius = 17.2
height = 56.4

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ob8n8"]
radius = 36.0
height = 124.0

[node name="CharacterBody2D" type="CharacterBody2D" groups=["Enemy"]]
scale = Vector2(5, 5)
script = ExtResource("1_djl10")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1rywt")
animation = &"death"
autoplay = "idle1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.6, 5.2)
shape = SubResource("CapsuleShape2D_kx1sc")

[node name="weapon_collision" type="Area2D" parent="."]

[node name="RightCollisionPolygon2D" type="CollisionPolygon2D" parent="weapon_collision"]
polygon = PackedVector2Array(3, 33, -15.8, 32.6, -20.4, 12.8, -25, -6.4, -15.6, -26.8, -4.4, -35.8, 10, -39, 31, -35, 46.4, -18.6, 47.6, 3, 36.8, 22.4, 20.8, 30, 11.6, 33.2)

[node name="LeftCollisionPolygon2D" type="CollisionPolygon2D" parent="weapon_collision"]
rotation = 3.14159
scale = Vector2(1, -1)
polygon = PackedVector2Array(3, 33, -15.8, 32.6, -20.4, 12.8, -25, -6.4, -15.6, -26.8, -4.4, -35.8, 10, -39, 31, -35, 46.4, -18.6, 47.6, 3, 36.8, 22.4, 20.8, 30, 11.6, 33.2)

[node name="spell_collision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="spell_collision"]
position = Vector2(-32.6, 2.6)
rotation = 1.5708
scale = Vector2(100, 100)
shape = SubResource("CapsuleShape2D_ob8n8")

[node name="boss_hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_bm7d3")
volume_db = -15.0

[node name="boss_idle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_8xtdu")
autoplay = true

[node name="summoning" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_woyt7")

[node name="miss" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_2pf1k")
volume_db = -10.0

[node name="death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_rd6wh")
volume_db = -10.0
pitch_scale = 0.8

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_uv2nh")
volume_db = -20.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="weapon_collision" to="." method="_on_weapon_collision_body_entered"]
[connection signal="body_exited" from="weapon_collision" to="." method="_on_weapon_collision_body_exited"]
[connection signal="body_entered" from="spell_collision" to="." method="_on_spell_collision_body_entered"]
[connection signal="finished" from="death" to="." method="_on_death_finished"]
